[package]
name = "tdn-bevy"
version = "0.1.0"
edition = "2021"
authors = ["Dev <dev@cympletech.com>"]
readme = "README.md"
description = "TDN plugin for Bevy game engine."
repository = "https://github.com/cympletech/tdn-bevy"
keywords = ["tdn", "game", "bevy"]
license = "MIT/Apache-2.0"

[features]
default = ["ws"]
ws = ["async-tungstenite", "futures-lite", "futures-util", "tungstenite"]
wasm = ["tungstenite", "crossbeam-channel", "wasm-bindgen", "js-sys", "web-sys"]
p2p = []

[dependencies]
async-channel = "2.1"
bevy = { version = "0.12", default-features = false, features = ["multi-threaded"] }
tungstenite = { version = "0.21", default-features = false, optional = true }

# ws
async-tungstenite = { version = "0.24", features = ["async-std-runtime"], optional = true } # bevy use async-io
futures-lite = { version = "2.2", optional = true }
futures-util = { version = "0.3", default-features = false, optional = true }

# p2p
#tdn = { version = "0.10", optional = true }

# wasm
crossbeam-channel = { version = "0.5", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["BinaryType", "ErrorEvent", "MessageEvent", "WebSocket"], optional = true }
